# cae

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  FIXME.md  Makefile  README.md  TODO.md  TODO.txt  build.rs  cmds  gen_bindings.sh  rustfmt.toml  scratch
build_scripts/: compile_resources.sh  get_resource_headers.sh
docs/: cae.1  reasearch.md  rendering.md
examples/: ligatures.txt  urandom.txt
resources/shaders/opengl/: basic.frag  basic.vert  basic_color.vert  point.frag  point.vert  text.frag  text.vert
src/: buf.hh  buffer.cc  buffer.hh  character_classes.cc  color.cc  color.hh  common_state.hh  config.cc  config.hh  debug.hh  defer.hh  err.hh  errs.hh  fonts.cc  fonts.hh  hb_raw.rs  hb_wrap.rs  input_handler.cc  input_handler.hh  input_handling.cc  input_handling.hh  macros.hh  main.cc  main.rs  paired_chars.cc  paired_chars.hh  plat.cc  plat.hh  plat_com.hh  plat_unix.hh  slice.hh  stb_impl.cc  str.cc  str.hh  unit.hh  util.hh
src/graphics/: #vulkan.hh#  .#vulkan.hh  fonts.cc  fonts.hh  primitives.cc  primitives.hh  vulkan.cc  vulkan.hh  vulkan.hh.deprecated  window.cc  window.hh
src/graphics/opengl/: buffer_draw_info.cc  buffer_draw_info.hh  drawing.cc  drawing.hh  index.hh  primitives.cc  primitives.hh  shaders.cc  shaders.hh  state.hh  textures.cc  textures.hh  uniforms.cc  uniforms.hh
src/shaders/: text.frag  text.vert
